Combine login into  navbar.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     
 	<div ng-app="kingPinApp">
+        <div ng-include="'/partials/nav.html'" ng-controller="NavCtrl">
+
+        </div>
 		<div ng-view>
 		
 		</div>
